New projects and DOM rendering

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
                     <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                     <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
                     <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
+                    <li><a href="pages/events/click-events.html">Click events</a></li>
                 </ul>
 
             </ul>
@@ -326,7 +327,7 @@
 
                 <h5>Array Iteration</h5>
                 <ul class="sub-nav">
-                    <li><a href="pages/arrays/array-for-loop.html">Array for loop</a></li>
+                    <li><a href="pages/arrays/array-for-loop.html">Array for and while loop</a></li>
                     <li><a href="pages/arrays/array-foreach.html">forEach()</a> - calls a function (a callback function) once for each array element</li>
                     <li><a href="pages/arrays/array-indexOf.html">indexOf()</a> - returns index of an element </li>
                     <li><a href="pages/arrays/array-map.html">map()</a> - creates a new array by performing a function on each array element</li>
@@ -386,6 +387,8 @@
             <ul class="sub-nav">
                 <li><a href="pages/advanced/storage/storage.html">Browser Storage</a></li>
                 <li><a href="pages/advanced/storage/indexeddb.html">IndexedDB</a></li>
+                <li><a href="pages/advanced/storage/syncing-data-across-pages.html">Syncing data across pages</a></li>
+
             </ul>
         </ul>
 
@@ -480,7 +483,7 @@
 
 
 
-        <p class="toc-heading1">Projects</p>
+        <p class="toc-heading1">Projects (course 1)</p>
         <h3>Expense Tracker</h3>
         <ul>
             <li><a href="projects/expense-tracker/expense-tracker-01.html">Expense tracker (v1)</a></li>
@@ -520,6 +523,20 @@
             </li>
             <li><a href="examples/domrendering/domrendering.html">DOM Rendering</a></li>
         </ul>
+
+
+
+
+
+
+
+        <p class="toc-heading1">Projects (course 2)</p>
+        <h3>Expense Tracker</h3>
+        <ul>
+            <li><a href="projects/course2/modal/modal.html">Modals</a></li>
+        </ul>
+
+
 
 
         <script src="_js/jquery.js"></script>
