--- a/pages/advanced/misc/uuid/uuid.html
+++ b/pages/advanced/misc/uuid/uuid.html
@@ -107,6 +107,7 @@ uuidv4(); <span class="code-comment">// -> v4 UUID</span>
 
 
 
+
         <div class="row">
             <div class="col-5">
                 <p>Add JS to push UUID to an Array in localStorage.</p>
@@ -155,6 +156,68 @@ const notes = getSavedNotes()</span></pre>
                 <br><br><br><br><br>
             </div>
         </div>
+
+
+
+
+
+        <h1>Targeting by UUID</h1>
+        <div class="row">
+            <div class="col">
+                <p>View the following code.</p>
+                <ul>
+                    <li><a href="../../../../projects/refactoring/refactoring.html#target-uuid">Refactoring: Target UUID</a></li>
+                </ul>
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </section>
 
