--- a/pages/basics/links.html
+++ b/pages/basics/links.html
@@ -73,31 +73,31 @@
 
 
 
-                <div class="row">
-                    <div class="col">
-                        <h1>Tools</h1>
-                    </div>
-                </div>
+        <div class="row">
+            <div class="col">
+                <h1>Tools</h1>
+            </div>
+        </div>
 
-                <table class="table table-dark">
-                    <thead>
-                        <tr>
-                            <th scope="col">Site</th>
-                            <th scope="col">Description</th>
-                            <th scope="col">URL</th>
+        <table class="table table-dark">
+            <thead>
+                <tr>
+                    <th scope="col">Site</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">URL</th>
 
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>JavaScript variable name validator</td>
-                            <td>Tests JS variables</td>
-                            <td><a href="https://mothereff.in/js-variables" target="_blank">JS variable name validator</a></td>
-                        </tr>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>JavaScript variable name validator</td>
+                    <td>Tests JS variables</td>
+                    <td><a href="https://mothereff.in/js-variables" target="_blank">JS variable name validator</a></td>
+                </tr>
 
 
-                    </tbody>
-                </table>
+            </tbody>
+        </table>
 
 
 
@@ -209,19 +209,22 @@
                 <tr>
                     <td>Miscrosoft Development Network (MSDN)</td>
                     <td>Good for IE info.</td>
-                    <td><a href="https://msdn.microsoft.com/en-us/default.aspx" target="_blank">Miscrosoft Development Network (MSDN)</a></td>
+                    <td><a href="https://msdn.microsoft.com/en-us/default.aspx" target="_blank">Miscrosoft Development Network
+              (MSDN)</a></td>
                 </tr>
 
                 <tr>
                     <td>'window' object properties and methods</td>
                     <td>Properties and Methods used to interact with the 'window' object.</td>
-                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window" target="_blank">Properties and Methods for the 'window' object</a></td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Window" target="_blank">Properties and Methods
+              for the 'window' object</a></td>
                 </tr>
 
                 <tr>
                     <td>Document object properties and methods</td>
                     <td>Properties and Methods used to interact with the Document object.</td>
-                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/document" target="_blank">Properties and Methods of the Document</a></td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/document" target="_blank">Properties and Methods
+              of the Document</a></td>
                 </tr>
 
                 <tr>
@@ -239,7 +242,8 @@
                 <tr>
                     <td>Read-Only Properties</td>
                     <td>List of read-only properties.</td>
-                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Element" target="_blank">Read only properties</a></td>
+                    <td><a href="https://developer.mozilla.org/en-US/docs/Web/API/Element" target="_blank">Read only
+              properties</a></td>
                 </tr>
 
 
@@ -275,7 +279,8 @@
                 <tr>
                     <td>JavaScript tutorial</td>
                     <td>Lots of examples.</td>
-                    <td><a href="http://www.tutorialspoint.com/javascript/javascript_overview.htm" target="_blank">TutorialsPoint JavaScript Tutorial</a></td>
+                    <td><a href="http://www.tutorialspoint.com/javascript/javascript_overview.htm" target="_blank">TutorialsPoint
+              JavaScript Tutorial</a></td>
                 </tr>
                 <tr>
                     <td>JavaScript tutorial</td>
@@ -398,7 +403,23 @@
 
             </tbody>
         </table>
-    </section>
+
+
+
+        <div class="row">
+            <div class="col">
+                <h1>Learning Tools</h1>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <ul>
+                    <li> <a href="https://www.codewars.com/">Coding Wars - coding challenges to help you learn
+          </li>
+        </ul>
+      </div>
+    </div>
 
 
 
@@ -406,8 +427,40 @@
 
 
 
-    <script src="../../_js/jquery.js"></script>
-    <script src="../../_js/bootstrap.bundle.js"></script>
+    <div class="row">
+      <div class="col">
+        <h1>People</h1>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <ul>
+          <li> <a href="https://www.pluralsight.com/authors/kyle-simpson">Kyle Simpson - Top developer</li>
+          <li> <a
+              href=" https://levelup.gitconnected.com/kyle-simpson-ive-forgotten-more-javascript-than-most-people-ever-learn-3bddc6c13e93">Kyle
+              Simpson - Top developer</li>
+
+
+          </li>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+
+  </section>
+
+
+
+
+
+
+
+  <script src="../../_js/jquery.js"></script>
+  <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
