deconstructors and code execution basics

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <div id="tutorial-link-section">
             <div class="row">
                 <div class="col">
-
-
                     <h1>My JavaScript Tutorial</h1>
-
                 </div>
             </div>
         </div>
+
+
+
 
         <p class="toc-heading1">References</p>
         <p class="toc-heading2">Links and References</p>
@@ -36,6 +36,28 @@
 
                 <ul class="sub-nav">
                     <li><a href="pages/basics/links.html">Links and references</a></li>
+                </ul>
+            </ul>
+        </nav>
+
+
+
+
+
+
+
+
+        <p class="toc-heading1">Overview of JavaScript</p>
+
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li><a href="pages/overview/overview.html">JavaScript overview</a></li>
+                    <li><a href="pages/overview/runtime-and-engine.html">Runtime and Engine</a></li>
+                    <li><a href="pages/overview/code-execution.html">Code Execution</a></li>
+                    <li><a href="pages/overview/scope-chain.html">Scope Chain</a></li>
+                    <li><a href="pages/overview/primatives.html">Primatives</a></li>
                 </ul>
             </ul>
         </nav>
@@ -297,6 +319,7 @@
                     <li><a href="pages/objects/objects-altering.html">Altering Objects</a></li>
                     <li><a href="pages/objects/objects-deleting.html">Deleting an Object or property</a></li>
                     <li><a href="pages/objects/object-iteration.html">Object iteration</a></li>
+                    <li><a href="pages/objects/object-destructuring.html">Object Destructuring</a></li>
 
 
 
@@ -323,6 +346,7 @@
                 <ul class="sub-nav">
 
                     <li><a href="pages/arrays/arrays.html">Arrays</a> - Overview and length property</li>
+                    <li><a href="pages/arrays/array-destructuring.html">Array Destructuring</a></li>
                 </ul>
 
                 <h5>Array Iteration</h5>
