--- a/pages/basics/scope.html
+++ b/pages/basics/scope.html
@@ -78,7 +78,8 @@ console.log(varTwo)</span></pre>
         <h4>Variable shadowing</h4>
         <div class="row">
             <div class="col-6">
-                <p>Variable shadowing is when a local variable uses the same name as a Global variable, but the local value is used.</p>
+                <p>Variable shadowing is when a local variable uses the same name as a Global variable, but the local value is used.
+                </p>
                 <p>This prints 'Mike' since the local value is used over the Global value.</p>
 
             </div>
@@ -116,7 +117,8 @@ if (true) {
                 <ul>
                     <li>Global - This is when you declare the variable outside of any function. You can then access it in any script. However, if you update the variable within any function, the global value changes. So, any other references to that variable
                         are updated as well.</li>
-                    <li>Local - This is when you declare the variable inside a function. It's only then available within that function.</li>
+                    <li>Local - This is when you declare the variable inside a function. It's only then available within that function.
+                    </li>
                     <li>Block - new scope added with ES2015 used with 'const' and 'let' variables. The scope is limited to a small block of code, even within a function.</li>
                 </ul>
 
@@ -153,7 +155,8 @@ if (true) {
         <div class="row">
             <div class="col-6">
                 <p>The last line of myDog() runs the function.</p>
-                <p>Since the method inside of that function is the only thing that outputs data, the result is: Rover says woof.</p>
+                <p>Since the method inside of that function is the only thing that outputs data, the result is: Rover says woof.
+                </p>
 
             </div>
             <div class="col-6">
@@ -273,7 +276,8 @@ if (true) {
                 <p>This example breaks down scope variables.</p>
                 <p>NOTE how 'fahrenheit' is an argument, so it's local scope.</p>
                 <p>This outputs: 0, 20</p>
-                <p>NOTE that isFreezing is never printed because nothing returns this value. It's just there to explain scope.</p>
+                <p>NOTE that isFreezing is never printed because nothing returns this value. It's just there to explain scope.
+                </p>
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js"><span class="code-comment">// Global scope (convertFahrenheitToCelsius, tempOne, tempTwo)
