nullish operator, chaining

--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
 
 
                     <li><a href="pages/basics/operators-comparison.html">Comparison Operators</a></li>
+                    <li><a href="pages/basics/spread.html">Spread Operator</a></li>
+                    <li><a href="pages/basics/rest-pattern.html">Rest Pattern</a></li>
+                    <li><a href="pages/basics/nullish.html">nullish coalescing operator</a></li>
 
 
                     <li><a href="pages/basics/operators-boolean.html">Boolean Operators</a></li>
@@ -353,6 +356,7 @@
                 <ul class="sub-nav">
                     <li><a href="pages/arrays/array-for-loop.html">Array for and while loop</a></li>
                     <li><a href="pages/arrays/array-foreach.html">forEach()</a> - calls a function (a callback function) once for each array element</li>
+                    <li><a href="pages/arrays/array-for-of.html">for of()</a> ES6 Array loop</li>
                     <li><a href="pages/arrays/array-indexOf.html">indexOf()</a> - returns index of an element </li>
                     <li><a href="pages/arrays/array-map.html">map()</a> - creates a new array by performing a function on each array element</li>
                     <li><a href="pages/arrays/array-filter.html">filter()</a> - creates a new array, but only with elements that pass a specific test in the function</li>
