--- a/pages/objects/object-destructuring.html
+++ b/pages/objects/object-destructuring.html
@@ -251,30 +251,173 @@ console.log(a, b);</span></span></pre>
 
 
 
+        <h2>Nested Objects</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>This first deconstructs the Objects to create the variable openingHours.</p>
+                <p>This variable is then deconstructed.</p>
+                <p>This example also renames the property values of open and close to o and c for the property values of the inner nested Object.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const {
+    name,
+    openingHours,
+    categories
+} = restaurant;
+
+<span class="code-highlight">const {
+    fri: {
+        open: o,
+        close: c
+    },
+} = openingHours;
+
+console.log(o, c);</span></span></pre>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <h2>Part 1: Pass an Object into the function as an argument so the function deconstructs the object</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>Great way to pass in lots of data into a function.</p>
+                <p>First run restaurant.orderDelivery() with properties.</p>
+                <p>This creates an Object within the function.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">const restaurant = {
+    name: 'Classico Italiano',
+    location: 'Via Angelo Tavanti 23, Firenze, Italy',
+    categories: ['Italian', 'Pizzeria', 'Vegetarian', 'Organic'],
+    starterMenu: ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad'],
+    mainMenu: ['Pizza', 'Pasta', 'Risotto'],
+
+    openingHours: {
+        thu: {
+            open: 12,
+            close: 22,
+        },
+        fri: {
+            open: 11,
+            close: 23,
+        },
+        sat: {
+            open: 0, // Open 24 hours
+            close: 24,
+        },
+    },
+
+    order: function(starterIndex, mainIndex) {
+        return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]];
+    },
+    orderDelivery: function(obj) {
+        console.log(obj)
+    }
+};
+
+<span class="code-highlight">restaurant.orderDelivery({
+    time: '22:30',
+    address: 'Via del Sole, 21',
+    mainIndex: 2,
+    starterIndex: 2,
+})</span></span></pre>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <h2>Part 2: Passing an Object into a function to be deconstructed</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>Pass an Object into the function as an argument.</p>
+                <p>The function immediately deconstructs the object. This is why the names like starterIndex must be the same as they are in the Object being passed in.</p>
+                <p>The order doesn't matter.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js"> const restaurant = {
+    name: 'Classico Italiano',
+    location: 'Via Angelo Tavanti 23, Firenze, Italy',
+    categories: ['Italian', 'Pizzeria', 'Vegetarian', 'Organic'],
+    starterMenu: ['Focaccia', 'Bruschetta', 'Garlic Bread', 'Caprese Salad'],
+    mainMenu: ['Pizza', 'Pasta', 'Risotto'],
+
+    openingHours: {
+        thu: {
+            open: 12,
+            close: 22,
+        },
+        fri: {
+            open: 11,
+            close: 23,
+        },
+        sat: {
+            open: 0, // Open 24 hours
+            close: 24,
+        },
+    },
+
+    order: function(starterIndex, mainIndex) {
+        return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]];
+    },
+    // destructure
+    <span class="code-highlight">orderDelivery: function({
+        starterIndex,
+        mainIndex,
+        time,
+        address
+    }) {
+        console.log(`Order received: ${this.starterMenu[starterIndex]} and {this.mainMenu[mainIndex]} will be delivered to ${address} at ${time}`);</span>
+    },
+};
+
+
+restaurant.orderDelivery({
+    time: '22:30',
+    address: 'Via del Sole, 21',
+    mainIndex: 2,
+    starterIndex: 2,
+})</span></span></pre>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     </section>
     <script>
         'use strict'
-
-        let a = 111;
-        let b = 999;
-
-        const obj = {
-            a: 23,
-            b: 7,
-            c: 14
-        };
-
-        ({
-            a,
-            b
-        } = obj);
-
-
-        console.log(a, b);
-
-
 
 
 
@@ -303,15 +446,58 @@ console.log(a, b);</span></span></pre>
             order: function(starterIndex, mainIndex) {
                 return [this.starterMenu[starterIndex], this.mainMenu[mainIndex]];
             },
-        }
+            // destructure
+            orderDelivery: function({
+                starterIndex,
+                mainIndex,
+                time,
+                address
+            }) {
+                console.log(`Order received: ${this.starterMenu[starterIndex]} and ${this.mainMenu[mainIndex]} will be delivered to ${address} at ${time}`);
+            },
+        };
+
+
+        restaurant.orderDelivery({
+            time: '22:30',
+            address: 'Via del Sole, 21',
+            mainIndex: 2,
+            starterIndex: 2,
+        })
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         const {
-            menu = [], starterMenu: starters = []
+            name,
+            openingHours,
+            categories
         } = restaurant;
 
-        console.log(menu, starters)
-            // console.log(restaurantName, hours, tags)
+        // console.log(name, openingHours, categories)
+
+        const {
+            fri: {
+                open: o,
+                close: c
+            },
+        } = openingHours;
+
+        // console.log(o, c);
     </script>
 </body>
 
